--- a/package.json
+++ b/package.json
@@ -38,5 +38,6 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "homepage": "https://whanhee97.github.io/"
 }
