update: pakage.json

--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
     ]
   },
   "devDependencies": {},
-  "homepage": "https://whanhee97.github.io/"
+  "homepage": "https://whanhee97.github.io/Minesweeper"
 }
